# ltts

./: .gitignore  README.md  pyproject.toml
.github/workflows/: publish.yml
ltts/: cli.py
scripts/: set_version_from_tag.py
tts/: __init__.py  cli.py
