[project]
name = "tts"
version = "0.1.0"
description = "Text-to-speech CLI using Kokoro TTS"
readme = "README.md"
license = "MIT"
authors = [{name = "Frank Chiarulli Jr."}]
requires-python = ">=3.12"
dependencies = [
    "kokoro>=0.9.4",
    "misaki[ja,zh]>=0.9.4",
    "pip>=25.2",
    "soundfile>=0.13.1",
    "torch>=2.8.0",
    "unidic>=1.1.0",
]

[project.urls]
Repository = "https://github.com/fcjr/tts"
Issues = "https://github.com/fcjr/tts/issues"

[project.scripts]
tts = "tts:main"

[tool.uv]
package = true
